--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ MarkupSafe==3.0.2
 outcome==1.3.0.post0
 PySocks==1.7.1
 python-dotenv==1.1.0
+random-user-agent==1.0.1
 requests==2.32.3
 selenium==4.30.0
 sniffio==1.3.1
