--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,16 @@
-attrs==25.3.0
 beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
-h11==0.14.0
+Deprecated==1.2.18
 idna==3.10
 Jinja2==3.1.6
 MarkupSafe==3.0.2
-outcome==1.3.0.post0
-PySocks==1.7.1
+mss==10.0.0
+nodriver==0.44
 python-dotenv==1.1.0
-random-user-agent==1.0.1
 requests==2.32.3
-selenium==4.30.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
 soupsieve==2.6
-trio==0.29.0
-trio-websocket==0.12.2
-typing_extensions==4.13.0
+typing_extensions==4.13.1
 urllib3==2.3.0
-websocket-client==1.8.0
-wsproto==1.2.0
+websockets==15.0.1
+wrapt==1.17.2
