tweaked some components

--- a/company_data.json.dist
+++ b/company_data.json.dist
@@ -87,7 +87,8 @@
                 "key": "key_name",
                 "value": "appropriate_value"
             },
-            "attr_location":"attribute_with_the_id_value"
+            "attr_location":"attribute_with_the_id_value",
+            "regex":"regex_expression"
         }
     }
 }
